Add mail backup

--- a/sms.ini
+++ b/sms.ini
@@ -14,4 +14,14 @@ initcommands = ATZ,ATE0,AT+CMGF=1
 [rx]
 # Waiting before serial read
 waiting = 1
+read_all = AT+CMGL="ALL"
+read_unread = AT+CMGL="REC UNREAD"
 
+[mail]
+smtp = smtp.gmail.com
+port = 465
+user =
+password =
+from =
+to =
+debuglevel = False
