Add delete SMS message, solve problem with repeated notification.

--- a/sms.ini
+++ b/sms.ini
@@ -4,9 +4,9 @@ timeout = 1
 
 [modem]
 # MacOS
-#port = /dev/tty.HUAWEIMobile-Pcui
+port = /dev/tty.HUAWEIMobile-Pcui
 # Windows
-port = COM5
+#port = COM5
 baudrate = 9600
 # ATZ - reset configuration, ATE0 - turn off echo, AT+CMGF - SMS text mode
 initcommands = ATZ,ATE0,AT+CMGF=1
@@ -16,6 +16,7 @@ initcommands = ATZ,ATE0,AT+CMGF=1
 waiting = 1
 read_all = AT+CMGL="ALL"
 read_unread = AT+CMGL="REC UNREAD"
+delete = AT+CMGD=
 
 [mail]
 smtp = smtp.gmail.com
@@ -27,4 +28,4 @@ to =
 debuglevel = False
 
 [contacts]
-file = contacts.csv
+file = ../contacts.csv
